Fix footer alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@ $spacing-unit:     30px;
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
+$footer-grey:        #eee;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
